# calculator

./: .color_coded  .ycm_extra_conf.py  CMakeLists.txt
src/: calculator.cpp  dualop.cpp  dualop.h  helpers.cpp  helpers.h  singleop.cpp  singleop.h
